Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-853

Lzo Scanner doesn't handle EOF correctly if the file has a trailing block.

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.2.3
    • Impala 1.3
    • None
    • None

    Description

      the dcheck isn't the right way to handle this case.

        // Read in the compressed data
        uint8_t* compressed_data;
        int bytes_read;
        stream_->GetBytes(compressed_len, &compressed_data, &bytes_read, &status);
        RETURN_IF_ERROR(status);
        DCHECK_EQ(compressed_len, bytes_read);
        eos_read_ = stream_->eosr();
      

      Attachments

        Activity

          People

            nong_impala_60e1 Nong Li
            nong_impala_60e1 Nong Li
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: